register servers
